# L-HSystem

./: L-HSystem.cabal
.stack-work/install/x86_64-linux-ncurses6/lts-8.0/8.0.2/flag-cache/: L-HSystem-0.1.0.0-L23A8glBq1EKIsMBok0zK6  network-2.6.3.1-ABFtZSq90Z9BfMXNiqgBoe
.stack-work/install/x86_64-linux-ncurses6/lts-8.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/L-HSystem-0.1.0.0-L23A8glBq1EKIsMBok0zK6/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux-ncurses6/lts-8.0/8.0.2/pkgdb/: L-HSystem-0.1.0.0-L23A8glBq1EKIsMBok0zK6.conf  package.cache
app/: Main.hs  Server.hs  TestCli.hs
src/: LHsys.hs  Lib.hs
