name:                L-HSystem
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Antystenes/L-HSystem#readme
license:             BSD3
license-file:        LICENSE
author:              Morgoth
maintainer:          piotradwan@gmail.com
copyright:           2017 Morgoth
category:            MT
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable L-HSystem-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , L-HSystem
  default-language:    Haskell2010

test-suite L-HSystem-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , L-HSystem
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Antystenes/L-HSystem
