name:                L-HSystem
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Antystenes/L-HSystem#readme
license:             BSD3
license-file:        LICENSE
author:              Morgoth
maintainer:          piotradwan@gmail.com
copyright:           2017 Morgoth
category:            MT
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/LHsys
  exposed-modules:     LHsys
                     , Render
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
  default-language:    Haskell2010

executable L-HSys-server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       L-HSystem
                     , base
                     , bytestring >= 0.10.8.1
                     , network
  default-language:    Haskell2010

executable L-HSys-testcli
  hs-source-dirs:      app
  main-is:             TestCli.hs
  build-depends:       L-HSystem
                     , base
                     , bytestring >= 0.10.8.1
                     , network
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  
test-suite L-HSystem-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       L-HSystem
                     , base
                     , bytestring >= 0.10.8.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Antystenes/L-HSystem
